Complete header and first section

--- a/prepros.config
+++ b/prepros.config
@@ -496,8 +496,8 @@
           "type": "REPLACE_SEGMENTS",
           "segments": [
             {
-              "segment": "scss",
-              "replaceWith": "css"
+              "segment": "DigitalAgency/source/style.scss",
+              "replaceWith": "../css/style.css"
             },
             {
               "segment": "sass",
@@ -912,6 +912,43 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "source/about_section.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
+        "file": "source/header.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
+        "file": "source/main_content.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
+        "file": "source/styles.scss",
+        "config": {
+          "customOutput": "css/styles.css"
+        }
+      },
+      {
+        "file": "source/welcome_section.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
+        "file": "source/zeroing.scss",
+        "config": {
+          "autoCompile": false
+        }
+      }
+    ]
   }
 }
