Complete targets section

--- a/prepros.config
+++ b/prepros.config
@@ -938,6 +938,12 @@
         }
       },
       {
+        "file": "source/targets.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "source/welcome_section.scss",
         "config": {
           "autoCompile": false
