Complete services section

--- a/prepros.config
+++ b/prepros.config
@@ -932,6 +932,12 @@
         }
       },
       {
+        "file": "source/services.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "source/styles.scss",
         "config": {
           "customOutput": "css/styles.css"
