Complete advertising section

--- a/prepros.config
+++ b/prepros.config
@@ -920,6 +920,12 @@
         }
       },
       {
+        "file": "source/advertising.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "source/header.scss",
         "config": {
           "autoCompile": false
