--- a/prepros.config
+++ b/prepros.config
@@ -938,6 +938,18 @@
         }
       },
       {
+        "file": "source/offer.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
+        "file": "source/result.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "source/services.scss",
         "config": {
           "autoCompile": false
