Мобильная версия почти закончена

--- a/prepros.config
+++ b/prepros.config
@@ -926,6 +926,18 @@
         }
       },
       {
+        "file": "source/clients.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
+        "file": "source/footer.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
         "file": "source/header.scss",
         "config": {
           "autoCompile": false
